// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalStateBadge matches snapshot for state Active 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-800"
>
  Active
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Cancelled 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-500"
>
  Cancelled
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Defeated 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-red-100 text-red-800"
>
  Defeated
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Executed 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-800"
>
  Executed
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Expired 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-rose-100 text-rose-800"
>
  Expired
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Pending 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800"
>
  Pending
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Queued 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-purple-100 text-purple-800"
>
  Queued
</span>
`;

exports[`ProposalStateBadge matches snapshot for state Succeeded 1`] = `
<span
  className="px-3 py-1 rounded-full text-xs font-medium bg-green-100 text-green-800"
>
  Succeeded
</span>
`;
